edit : About Me message

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
               <hr class="content-divider">
               <h2 class="subtitle">
                 2016年から週3日をプログラマとして東京、あとは青森で農業や日本各地でITサポートをして、4年弱を過ごしました。<br><br>
-                2019年7月から地元である青森に戻り、拠点を一つにしました。2020年3月からは八戸に拠点をつくり、プログラマの仕事を中心にしています。<br><br>
-                今は、プログラマとりんご農家の仕事をしながら、挑戦している人と一緒に挑戦・サポートをしています。
+                2019年7月から地元である青森に戻り、拠点を一つにしました。2020年3月からは八戸に拠点をもちました。<br><br>
+                プログラマとりんご農家の仕事をしながら、挑戦している人と一緒に挑戦・サポートをしています。
               </h2>
             </div>
           </div>
