--- a/index.html
+++ b/index.html
@@ -6,15 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ainai atsushi | web programmer</title>
-    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="bulma/css/bulma.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <!-- <script src="https://kit.fontawesome.com/15181efa86.js" crossorigin="anonymous"></script> -->
-    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <!-- ファビコン -->
     <link rel="icon" type="image/png" href="images/favicon.png">
     <!-- スマホ用アイコン -->
     <link rel="apple-touch-icon" sizes="180x180" href="aa-icon.png">
+    <!-- Font Awesome -->
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113519523-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-113519523-1');
+    </script>
   </head>
 
   <body>
