edit : images size, message

--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
               <hr class="content-divider">
               <h2 class="subtitle">
                 2016年から週3日をプログラマとして東京、あとは青森で農業や日本各地でITサポートをして、4年弱を過ごしました。<br><br>
-                2019年7月から地元である青森に戻り、2020年3月からは八戸市を拠点にしています。<br><br>
-                プログラマとりんご農家の仕事をしながら、挑戦している人と一緒に挑戦・サポートをしています。
+                2019年7月から地元である青森に戻り、2020年3月からは八戸市にいます。地元の五戸町とは車で30分ほどです。<br><br>
+                プログラマとりんご農家の仕事をしながら、挑戦している人と一緒に挑戦・サポートをしています。<br><br>
+                HACHINOHE DIME / 青森ワッツ / ヴァンラーレ八戸 / 東北フリーブレイズ / F1 / WRC / Super GT などなどスポーツ観戦の仲間を探しています。
               </h2>
             </div>
           </div>
@@ -89,6 +90,8 @@
               <hr class="content-divider">
               <h2 class="subtitle">
                 PHP / Java / HTML5 / CSS3 / JavaScript / Vue.js / React / Google Apps Script / Laravel / CakePHP / Symfony / WordPress / Magento / nginx / Apache / Tomcat / MySQL / MariaDB / Oracle / Google Cloud Platform / Amazon Web Services / Linux / Windows / macOS / CentOS / Ubuntu<br><br>
+                Affinigy Photo / Affinity Desinger / Sketch<br><br>
+                Webサイト作成 / Webアプリケーション開発 / ECサイト構築 / Webサイトなどの運用。保守 / DevOps / IT導入・活用のサポート<br><br>
                 生きたい場所で自分らしく生きること・やりたいことを実現すること・1日を幸せに生きることを、ITスキルを活用して、サポートしていきます。
               </h2>
             </div>
