--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ainai atsushi | web programmer</title>
+    <title>ainai atsushi | programmer</title>
     <link rel="stylesheet" type="text/css" href="bulma/css/bulma.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- ファビコン -->
@@ -91,7 +91,7 @@
               <h2 class="subtitle">
                 PHP / Java / HTML5 / CSS3 / JavaScript / Vue.js / React / Google Apps Script / Laravel / CakePHP / Symfony / WordPress / Magento / nginx / Apache / Tomcat / MySQL / MariaDB / Oracle / Google Cloud Platform / Amazon Web Services / Linux / Windows / macOS / CentOS / Ubuntu<br><br>
                 Affinigy Photo / Affinity Desinger / Sketch<br><br>
-                Webサイト作成 / Webアプリケーション開発 / ECサイト構築 / Webサイトなどの運用。保守 / DevOps / IT導入・活用のサポート<br><br>
+                Webサイト作成 / Webアプリケーション開発 / ECサイト構築 / Webサイトなどの運用・保守 / DevOps / IT導入・活用のサポート / PHPプログラマインストラクター<br><br>
                 生きたい場所で自分らしく生きること・やりたいことを実現すること・1日を幸せに生きることを、ITスキルを活用して、サポートしていきます。
               </h2>
             </div>
