--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a href="https://twitter.com/aatsushi07" title="Twitter" class="ml-4 mr-1" target="_blank" rel="noopener noreferrer">
                   <i class="header-sns fab fa-2x fa-twitter"></i>
                 </a>
-                <a href="https://www.instagram.com/ainaiatsushi/" title="Instagram" class="mr-1" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.instagram.com/ainai.atsushi/" title="Instagram" class="mr-1" target="_blank" rel="noopener noreferrer">
                   <i class="header-sns fab fa-2x fa-instagram"></i>
                 </a>
                 <a href="https://www.pinterest.jp/ainaiatsushi/boards/" title="Pinterest" class="mr-1" target="_blank" rel="noopener noreferrer">
