--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               <hr class="content-divider">
               <h2 class="subtitle">
                 お好きなSNS、または<br><br>
-                <a href="mailto:ainai.atsushi+blog@gmail.com">Email：ainai.atsushi+blog@gmail.com</a><br><br>
+                <a href="mailto:ainai.atsushi+mypage@gmail.com">Email：ainai.atsushi+mypage@gmail.com</a><br><br>
                 にメッセージをください。<br>
                 サポートできることがあります。
               </h2>
