--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 2016年から週3日をプログラマとして東京、あとは青森で農業や日本各地でITサポートをして、4年弱を過ごしました。<br><br>
                 2019年7月から地元である青森に戻り、2020年3月からは八戸市にいます。地元の五戸町とは車で30分ほどです。<br><br>
                 プログラマとりんご農家の仕事をしながら、挑戦している人と一緒に挑戦・サポートをしています。<br><br>
-                HACHINOHE DIME / 青森ワッツ / ヴァンラーレ八戸 / 東北フリーブレイズ / F1 / WRC / Super GT などなどスポーツ観戦の仲間を探しています。
+                HACHINOHE DIME / 青森ワッツ / ヴァンラーレ八戸 / 東北フリーブレイズ / F1 / WRC / Super GT などなどスポーツ観戦もします。
               </h2>
             </div>
           </div>
