メッセージなど微修正

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ainai atsushi | programmer</title>
+    <title>ainai atsushi</title>
     <link rel="stylesheet" type="text/css" href="bulma/css/bulma.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- ファビコン -->
@@ -73,7 +73,8 @@
               <h2 class="subtitle">
                 2016年から週3日をプログラマとして東京、あとは青森で農業や日本各地でITサポートをして、4年弱を過ごしました。<br><br>
                 2019年7月から地元である青森に戻り、2020年3月からは八戸市にいます。地元の五戸町とは車で30分ほどです。<br><br>
-                プログラマとりんご農家の仕事をしながら、挑戦している人と一緒に挑戦・サポートをしています。<br><br>
+                プログラマであり、りんご農家です。<br><br>
+                今のライフスタイルだからこそ、形にできることを、一つずつ実現して、新しい活動の場所をつくっています。<br><br>
                 HACHINOHE DIME / 青森ワッツ / ヴァンラーレ八戸 / 東北フリーブレイズ / F1 / WRC / Super GT などなどスポーツ観戦もします。
               </h2>
             </div>
@@ -120,7 +121,7 @@
     <footer class="footer py-5">
       <div class="content has-text-centered">
         <p class="footer-message">
-          © ainai.atsushi 2016-2021<br>
+          © ainai.atsushi 2016-2022<br>
           <span class="license">
             Bulma by <a href="https://jgthms.com">Jeremy Thomas</a>.
             The source code is licensed <a href="http://opensource.org/licenses/mit-license.php">MIT</a>.
