--- a/index.html
+++ b/index.html
@@ -14,16 +14,6 @@
     <link rel="apple-touch-icon" sizes="180x180" href="aa-icon.png">
     <!-- Font Awesome -->
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
-    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113519523-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-113519523-1');
-    </script>
   </head>
 
   <body>
@@ -63,12 +53,12 @@
         </div>
       </div>
     </section>
-    <section id="content-box-1" class="content-box hero is-large">
+    <section id="content-box-1" class="hero is-large">
       <div class="hero-body">
         <div class="container">
           <div class="columns">
-            <div class="column is-6 is-offset-6">
-              <h1 class="title is-1 ">About Me</h1>
+            <div class="column is-7 is-offset-5 content-background">
+              <h1 class="title">About Me</h1>
               <hr class="content-divider">
               <h2 class="subtitle">
                 2016年から週3日をプログラマとして東京、あとは青森で農業や日本各地でITサポートをして、4年弱を過ごしました。<br><br>
@@ -82,15 +72,15 @@
         </div>
       </div>
     </section>
-    <section id="content-box-2" class="hero is-large">
+    <section id="content-box-2" class="hero is-large content-box background-image-2">
       <div class="hero-body">
         <div class="container">
           <div class="columns">
-            <div class="column is-6">
-              <h1 class="title is-1">Future</h1>
+            <div class="column is-7 content-background">
+              <h1 class="title">Future</h1>
               <hr class="content-divider">
               <h2 class="subtitle">
-                PHP / Java / HTML5 / CSS3 / JavaScript / Vue.js / React / Google Apps Script / Laravel / CakePHP / Symfony / WordPress / Magento / nginx / Apache / Tomcat / MySQL / MariaDB / Oracle / Google Cloud Platform / Amazon Web Services / Linux / Windows / macOS / CentOS / Ubuntu<br><br>
+                PHP / HTML5 / CSS3 / JavaScript / Vue.js / React / Google Apps Script / Laravel / CakePHP / WordPress / nginx / Apache / Tomcat / MySQL / PostgreSQL / MariaDB / Oracle / GraphQL / Google Cloud Platform / Amazon Web Services / Linux / Windows / macOS / CentOS / Ubuntu<br><br>
                 Affinigy Photo / Affinity Desinger / Sketch<br><br>
                 Webサイト作成 / Webアプリケーション開発 / ECサイト構築 / Webサイトなどの運用・保守 / DevOps / IT導入・活用のサポート / PHPプログラマインストラクター<br><br>
                 生きたい場所で自分らしく生きること・やりたいことを実現すること・1日を幸せに生きることを、ITスキルを活用して、サポートしていきます。
@@ -100,14 +90,14 @@
         </div>
       </div>
     </section>
-    <section id="content-box-3" class="hero is-large">
+    <section id="content-box-3" class="hero is-large content-box background-image-3">
       <div class="hero-body">
         <div class="container">
           <div class="columns">
-            <div class="column is-6 is-offset-6">
-              <h1 class="title is-1">Contact</h1>
+            <div class="column is-7 is-offset-5 content-background">
+              <h1 class="title">Contact</h1>
               <hr class="content-divider">
-              <h2 class="subtitle">
+              <h2 class="subtitle link-type01">
                 お好きなSNS、または<br><br>
                 <a href="mailto:ainai.atsushi+mypage@gmail.com">Email：ainai.atsushi+mypage@gmail.com</a><br><br>
                 にメッセージをください。<br>
@@ -122,7 +112,7 @@
       <div class="content has-text-centered">
         <p class="footer-message">
           © ainai.atsushi 2016-2022<br>
-          <span class="license">
+          <span class="license link-type01">
             Bulma by <a href="https://jgthms.com">Jeremy Thomas</a>.
             The source code is licensed <a href="http://opensource.org/licenses/mit-license.php">MIT</a>.
           </span>
