プライバシーポリシーのページを追加

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
           <div class="columns">
             <div class="column is-three-fifths is-offset-one-fifth">
               <figure class="image">
-                <img src="images/ainaiatsushi-logo-font-white.png">
+                <a href="https://ainaiatsushi.com/">
+                  <img src="images/ainaiatsushi-logo-font-white.png">
+                </a>
               </figure>
               <h2 class="header-message mx-4 mt-6">
                 <strong>Webプログラマ＆リンゴ農家<br>気ままに楽しく。気の向くままに。</strong>
@@ -111,8 +113,12 @@
     <footer class="footer py-5">
       <div class="content has-text-centered">
         <p class="footer-message">
-          © ainai.atsushi 2016-2022<br>
+          <a href="https://ainaiatsushi.com/">ホーム</a>
+          &emsp;
+          <a href="https://ainaiatsushi.com/privacy.html">プライバシーポリシー</a>
+          <br>
           <span class="license link-type01">
+            © ainai.atsushi 2016-2022&emsp;
             Bulma by <a href="https://jgthms.com">Jeremy Thomas</a>.
             The source code is licensed <a href="http://opensource.org/licenses/mit-license.php">MIT</a>.
           </span>
