レイアウトを調整

--- a/privacy.html
+++ b/privacy.html
@@ -36,7 +36,7 @@
       <div class="hero-body">
         <div class="container">
           <div class="columns">
-            <div class="column content-background">
+            <div class="column is-10 is-offset-1 content-background">
               <h1 class="content-title">プライバシーポリシー</h2>
               <hr class="content-divider">
               <p class="content-text mb-5">
@@ -77,8 +77,8 @@
                 3.&nbsp;第三者が当Webサイト外で個人情報その他の利用者情報を取得した場合<br>
               </p>
               <h2 class="content-subtitle">8.&nbsp;お問い合わせ</h2>
-              <p class="content-text mb-5 link-type01">
-                本プライバシーポリシーに関するお問い合わせにつきましては、&nbsp;<a href="mailto:ainai.atsushi+mypage@gmail.com">Email：ainai.atsushi+mypage@gmail.com</a>&nbsp;で受け付けております。<br>
+              <p class="content-text link-type01">
+                本プライバシーポリシーに関するお問い合わせにつきましては、&nbsp;<a href="mailto:ainai.atsushi+mypage@gmail.com" style="text-decoration: underline;">ainai.atsushi+mypage@gmail.com</a>&nbsp;で受け付けております。<br>
                 何かご不明な点、ご指摘がありましたらお問い合わせください。
               </p>
             </div>
@@ -86,7 +86,7 @@
         </div>
       </div>
     </section>
-    <footer class="footer py-5">
+    <footer class="footer pt-0 pb-5">
       <div class="content has-text-centered">
         <p class="footer-message">
           <a href="https://ainaiatsushi.com/">ホーム</a>
