プライバシーポリシーの修正

--- a/privacy.html
+++ b/privacy.html
@@ -53,8 +53,8 @@
               <h2 class="content-subtitle">3.&nbsp;個人情報の収集</h2>
               <p class="content-text mb-5 link-type01">
                 当Webサイトの運営に必要な範囲で個人情報を収集いたします。<br>
-                加えて当Webサイトでは、当Webサイトの運営のため、お問い合わせに回答するため（本人確認を行うことを含む）、マーケット分析の場合など、個人情報を利用させていただく場合があります。<br>
-                当Webサイトでは、利用状況やユーザー属性情報を把握するためにGoogle Analyticsを利用しております。Google Analyticsではクッキー（cookie）を使用し、個人を特定する情報を含まずにログを収集いたします。なお、Google Analyticsの利用により収集されるログはGoogleのプライバシーポリシーに基づいて管理されます。Google Analyticsについて、およびGoogleのプライバシーポリシーについては&nbsp;<a href="https://support.google.com/analytics/answer/6004245?hl=ja" style="text-decoration: underline;">Google Analytics データのプライバシーとセキュリティ</a>&nbsp;をご覧ください。<br>
+                加えて、当Webサイトの運営のため、お問い合わせに回答するため（本人確認を行うことを含む）、マーケット分析の場合など、個人情報を利用させていただく場合があります。<br>
+                当Webサイトでは、利用状況やユーザー属性情報を把握するためにGoogle Analyticsを利用しております。Google Analyticsでは、クッキー（cookie）を使用し、個人を特定する情報を含まずに収集いたします。なお、Google Analyticsの利用により収集される情報はGoogleのプライバシーポリシーに基づいて管理されます。Google Analyticsについて、およびGoogleのプライバシーポリシーについては&nbsp;<a href="https://support.google.com/analytics/answer/6004245?hl=ja" style="text-decoration: underline;">Google Analytics データのプライバシーとセキュリティ</a>&nbsp;をご覧ください。<br>
               </p>
               <h2 class="content-subtitle">4.&nbsp;個人情報の利用</h2>
               <p class="content-text mb-5">
